src/test/ui/associated-types/cache/project-fn-ret-invariant.transmute.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:58:4
   |
LL | fn baz<'a,'b>(x: Type<'a>) -> Type<'static> {
   |        -- lifetime `'a` defined here
...
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |    ^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-invariant.rs:58:4
   |
LL | fn baz<'a,'b>(x: Type<'a>) -> Type<'static> {
   |        -- -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
...
LL |    bar(foo, x) //[transmute]~ ERROR E0495
   |    ^^^^^^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`

error: aborting due to 2 previous errors

